NURBS Surface Edit Mode: Spline Cage of Unselected Surface Is Not Fully Rendered #84260

Closed
opened 2020-12-30 04:59:43 +01:00 by Garry R. Osgood · 6 comments

System Information
Operating system: Linux-5.9.6-gentoo-bertha-x86_64-Intel-R-_Xeon-R-CPU_E5-2630_v4@_2.20GHz-with-gentoo-2.7 64 Bits
Graphics card: llvmpipe (LLVM 9.0.1, 256 bits) VMware, Inc. 3.3 (Core Profile) Mesa 20.1.10

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-29 18:57, hash: c1740e9ad0
Broken: (first bad) 2.92.0 Alpha, branch: master, commit date: Fri Nov 13 21:43:00 2020 +0100, hash: 0be88c7d15
Worked: (last good) 2.92.0 Alpha, branch: master, commit date: Fri Nov 13 13:56:55 2020 -0500 hash: 9d28353b52
Worked: version: 2.91.0 Release, branch: master, date: Wed Nov 25 09:34:47 2020 +0100 hash: 0f45cab862b8

Short description of error
Where a NURBS surface object has two or more disjoint surfaces, in Edit Mode only the actively edited surface is drawn with the control cage in bold, red/gold lines. The other surfaces have control cages drawn with narrower lines in muted colors. See the following screen shot:
9d28353b52.png
With the first bad commit, the muted cages are no longer being drawn, see following:
c1740e9ad0.png

Exact steps for others to reproduce the error
Open the following blend file in the current 2.91 Release, where NURBS surfaces will be rendered correctly in edit mode. Compare that when opening this file in the current 2.92.0 master branch from the first bad commit on wards.
surface_cage.blend

**System Information** Operating system: Linux-5.9.6-gentoo-bertha-x86_64-Intel-R-_Xeon-R-_CPU_E5-2630_v4_@_2.20GHz-with-gentoo-2.7 64 Bits Graphics card: llvmpipe (LLVM 9.0.1, 256 bits) VMware, Inc. 3.3 (Core Profile) Mesa 20.1.10 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-29 18:57, hash: `c1740e9ad0` Broken: (first bad) 2.92.0 Alpha, branch: master, commit date: Fri Nov 13 21:43:00 2020 +0100, hash: 0be88c7d15 Worked: (last good) 2.92.0 Alpha, branch: master, commit date: Fri Nov 13 13:56:55 2020 -0500 hash: `9d28353b52` Worked: version: 2.91.0 Release, branch: master, date: Wed Nov 25 09:34:47 2020 +0100 hash: `0f45cab862b8` **Short description of error** Where a NURBS surface object has two or more disjoint surfaces, in Edit Mode only the actively edited surface is drawn with the control cage in bold, red/gold lines. The other surfaces have control cages drawn with narrower lines in muted colors. See the following screen shot: ![9d28353b52.png](https://archive.blender.org/developer/F9536884/rB9d28353b525e.png) With the first bad commit, the muted cages are no longer being drawn, see following: ![c1740e9ad0.png](https://archive.blender.org/developer/F9536887/rBc1740e9ad02d.png) **Exact steps for others to reproduce the error** Open the following blend file in the current 2.91 Release, where NURBS surfaces will be rendered correctly in edit mode. Compare that when opening this file in the current 2.92.0 master branch from the first bad commit on wards. [surface_cage.blend](https://archive.blender.org/developer/F9536908/surface_cage.blend)

Added subscriber: @grosgood

Added subscriber: @grosgood
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I think it's fair to tag this for 2.92 since it's a regression.

I think it's fair to tag this for 2.92 since it's a regression.
Falk David self-assigned this 2021-01-04 09:35:29 +01:00

This issue was referenced by 09c1cb8a17

This issue was referenced by 09c1cb8a17e4c1a0aeea0d5477ec2db61390a5e8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84260
No description provided.