Fix T84260: NURBS edit mode lines not showing

When in edit mode, the edit lines for de-selected surfaces did not
show up.

The bug was caused by the is_gpencil bool which reused another flag.
Both grease pencil and nurbs surfaces use the edit_curve_handle shader.
A dedicated flag was added to make sure the is_gpencil bool is
set correctly.

Maniphest Tasks: T84260

Differential Revision: https://developer.blender.org/D9985