source/blender/draw/intern/shaders/common_globals_lib.glsl
@@ -144,3 +144,4 @@ layout(std140) uniform globalsBlock
 #define EDGE_SEAM (1 << 5)
 #define EDGE_SHARP (1 << 6)
 #define EDGE_FREESTYLE (1 << 7)
+#define VERT_GPENCIL_BEZT_HANDLE (1 << 30)
